2015-07-10  gepr  <gepr@tempusdictum.com>

	* agg.r: Change y axis label to generic "amount" if the 1st filename contains "Symptom".

2015-07-09  gepr  <gepr@tempusdictum.com>

	* mexplot.r: New script to automate multi-trial Symptom vs. morbidity plots.  Might work for other variables in the looseDyn parameter set ... didn't test that though.

	* agg.r (agg.r): Add more informative (longer) names to the experiment titles.

2015-06-29  gepr  <gepr@tempusdictum.com>

	* plot-cols.r: New script to plot any number of columns from a set of csv files.

	* cmp-by-model.r: Use semi-log plots.

2015-06-22  gepr  <gepr@tempusdictum.com>

	* paramtest.sh: Simple script to execute Parameters.main().

2015-06-11  gepr  <gepr@tempusdictum.com>

	* cmp-by-model.r: Update to include the LooseDyn model plots.
	Change to match file name change from ObsCompound to ObsDrug.

2015-06-08  gepr  <gepr@tempusdictum.com>

	* agg.r, cmp-by-model.r: Add option to print SVG and single plot per page.  Also change the way limits are computed, formatting, etc.

2015-06-01  gepr  <gepr@tempusdictum.com>

	* cmp-by-model.r: Add test for "conc" or "fract" in column names and use different y label depending.

2015-05-11  gepr  <gepr@tempusdictum.com>

	* agg.r: Script to aggregate (mean) data from several trials.

2015-05-07  gepr  <gepr@tempusdictum.com>

	* cmp-by-model.r: Fix usage.

2015-04-29  gepr  <gepr@tempusdictum.com>

	* cmp-by-col.r: List files by pattern containing "Loose" in experiment directories.
