@@ -2,6 +2,11 @@
 <project-private xmlns="http://www.netbeans.org/ns/project-private/1">
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/2" lastBookmarkId="0"/>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
-        <group/>
+        <group>
+            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Model.java</file>
+            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/ctrl/Batch.java</file>
+            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Tight.java</file>
+            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/FunctionCall.java</file>
+        </group>
     </open-files>
 </project-private>
